--- a/DeveloperPortal/DevChat.xaml
+++ b/DeveloperPortal/DevChat.xaml
@@ -1,45 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:developerPortal="clr-namespace:DeveloperPortal"
-             xmlns:chats="clr-namespace:DeveloperPortal.Models.Chats"
+             xmlns:viewmodel="clr-namespace:DeveloperPortal.ViewModels"
+             xmlns:chatmessages="clr-namespace:DeveloperPortal.Models.Chats"
              x:Class="DeveloperPortal.DevChat"
-             x:DataType="chats:ChatMessage"
              Appearing="OnPageAppearing"
-             Padding="0">
+             x:DataType="viewmodel:DevChatViewModel"
+             Title="{Binding Title}">
 
-    <Grid RowSpacing="0" ColumnSpacing="0" Margin="0,-40,0,0">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-
-        <Button Text="Back" 
-                HorizontalOptions="Start" 
-                WidthRequest="100" 
-                Clicked="OnBackButtonClicked"
-                Grid.Row="0" 
-                VerticalOptions="Center"
-                BackgroundColor="#c6002a"
-                Margin="10,0" />
-
-        <Label Text="Chat"
-               FontSize="Medium"
-               HorizontalOptions="Center"
-               Grid.Row="0"
-               Margin="0,0,0,0"
-               VerticalOptions="Center" />
-
-        <CollectionView x:Name="MessagesList" 
-                        Grid.Row="1"
-                        VerticalOptions="FillAndExpand"
-                        HorizontalOptions="FillAndExpand"
-                        Margin="10,0"
-                        BackgroundColor="White">
+        <CollectionView 
+            x:Name="MessagesList" 
+            Grid.Row="0"
+            VerticalOptions="FillAndExpand"
+            HorizontalOptions="FillAndExpand"
+            Margin="10,0"
+            BackgroundColor="White"
+            ItemsSource="{Binding Messages}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="chatmessages:ChatMessage">
                     <VerticalStackLayout Spacing="10">
                         <Label Text="{Binding Username}" Margin="5" FontAttributes="Bold"/>
                         <Frame BackgroundColor="LightGray" Padding="10" CornerRadius="5" HorizontalOptions="Start" VerticalOptions="Center">
@@ -50,49 +34,56 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <!-- Icon List -->
-        <HorizontalStackLayout x:Name="EmojiList" Spacing="5" Padding="10" Grid.Row="2" HorizontalOptions="CenterAndExpand">
-            <Button Text="😄" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="😁" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="😆" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="😅" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="😂" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="🤣" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="🥲" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
-            <Button Text="🥹" Clicked="OnIconClicked" BackgroundColor="#6a0dad" TextColor="White"/>
+        <HorizontalStackLayout x:Name="EmojiList" Spacing="5" Padding="10" Grid.Row="1" HorizontalOptions="CenterAndExpand" Opacity="0">
+            <Button Text="😄" Command="{Binding IconClickedCommand}" CommandParameter="😄" BackgroundColor="#c6002a" />
+            <Button Text="😁" Command="{Binding IconClickedCommand}" CommandParameter="😁" BackgroundColor="#c6002a" />
+            <Button Text="😆" Command="{Binding IconClickedCommand}" CommandParameter="😆" BackgroundColor="#c6002a" />
+            <Button Text="😅" Command="{Binding IconClickedCommand}" CommandParameter="😅" BackgroundColor="#c6002a" />
+            <Button Text="😂" Command="{Binding IconClickedCommand}" CommandParameter="😂" BackgroundColor="#c6002a" />
+            <Button Text="🤣" Command="{Binding IconClickedCommand}" CommandParameter="🤣" BackgroundColor="#c6002a" />
+            <Button Text="🥲" Command="{Binding IconClickedCommand}" CommandParameter="🥲" BackgroundColor="#c6002a" />
+            <Button Text="🥹" Command="{Binding IconClickedCommand}" CommandParameter="🥹" BackgroundColor="#c6002a" />
         </HorizontalStackLayout>
 
-        <Grid Grid.Row="3" ColumnSpacing="5" Padding="10" HorizontalOptions="FillAndExpand">
+        <Grid Grid.Row="2" ColumnSpacing="5" Padding="10" HorizontalOptions="FillAndExpand">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             
-            <Entry x:Name="MessageEntry" 
-                   Placeholder="Type your message here..." 
-                   VerticalOptions="Center"
-                   Grid.Column="0"
-                   HorizontalOptions="FillAndExpand"/>
+            <Entry 
+               Placeholder="Type your message here..." 
+               VerticalOptions="Center"
+               Grid.Column="0"
+               HorizontalOptions="FillAndExpand"
+               Text="{Binding MessageEntryText, Mode=TwoWay}"/>
+            <Button
+                Text="😄" 
+                Command="{Binding ShowIconsCommand}"
+                WidthRequest="60"
+                BackgroundColor="#c6002a"
+                VerticalOptions="Center"
+                Grid.Column="1"/>
 
-            <!-- Platform-Specific Send Buttons -->
-            <ImageButton x:Name="SendButtonPhone"
-                    Source="save_mobile.png"
-                    WidthRequest="40"
-                    HeightRequest="40"
-                    BackgroundColor="Transparent"
-                    Clicked="OnSendMessage"
-                    VerticalOptions="Center"
-                    Grid.Column="1"
-                    IsVisible="{OnIdiom Phone=true, Default=false}"/>
+            <ImageButton
+                Source="save_mobile.png"
+                WidthRequest="40"
+                HeightRequest="40"
+                BackgroundColor="Transparent"
+                Command="{Binding SendMessageCommand}"
+                VerticalOptions="Center"
+                Grid.Column="2"
+                IsVisible="{OnIdiom Phone=true, Default=false}"/>
             
-            <Button x:Name="SendButtonDesktop"
-                    Text="Send" 
-                    Clicked="OnSendMessage"
-                    WidthRequest="60"
-                    BackgroundColor="#c6002a"
-                    VerticalOptions="Center"
-                    Grid.Column="1"
-                    IsVisible="{OnIdiom Phone=false, Default=true}"/>
+            <Button
+                Text="Send" 
+                Command="{Binding SendMessageCommand}"
+                WidthRequest="60"
+                BackgroundColor="#c6002a"
+                VerticalOptions="Center"
+                Grid.Column="2"
+                IsVisible="{OnIdiom Phone=false, Default=true}"/>
         </Grid>
     </Grid>
 </ContentPage>
