--- a/DeveloperPortal/DevNotes.xaml
+++ b/DeveloperPortal/DevNotes.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:DeveloperPortal.ViewModels"
              xmlns:notes="clr-namespace:DeveloperPortal.Models.Notes"
              x:Class="DeveloperPortal.DevNotes"
-             x:DataType="notes:Note">
+             x:DataType="viewmodel:DevNotesViewModel"
+             Title="Notes">
 
     <ContentPage.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
@@ -15,25 +17,22 @@
         </Style>
     </ContentPage.Resources>
 
-    <VerticalStackLayout>
-        <HorizontalStackLayout>
-            <Button Text="Back" 
-                    HorizontalOptions="Start" 
-                    Style="{StaticResource ButtonStyle}" 
-                    Clicked="OnBackButtonClicked" 
-                    x:Name="BackButton" />
-
-            <Label Text="Notes" 
-                   FontSize="Medium" 
-                   HorizontalOptions="Center" />
-        </HorizontalStackLayout>
-
-        <CollectionView x:Name="NoteList" 
-                        HeightRequest="350" 
-                        SelectionMode="Single" 
-                        SelectionChanged="OnNoteSelected">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <CollectionView 
+            Grid.Row="0"
+            VerticalOptions="FillAndExpand"
+            HorizontalOptions="FillAndExpand"
+            Margin="10,0"
+            BackgroundColor="White"
+            ItemsSource="{Binding Notes}" 
+            SelectionMode="Single" 
+            SelectedItem="{Binding SelectedNote}">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="notes:Note">
                     <Grid Padding="10" Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -55,26 +54,33 @@
                             Grid.Row="2" 
                             Grid.Column="0" 
                             Spacing="20">
-                            <Button Text="Edit" 
-                                    Clicked="OnEditNote" 
-                                    Style="{StaticResource ButtonStyle}" 
-                                    CommandParameter="{Binding .}" />
                             <Button Text="Delete" 
-                                    Clicked="OnDeleteNote" 
-                                    Style="{StaticResource ButtonStyle}" 
-                                    CommandParameter="{Binding .}" />
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteNoteCommand}" 
+                                    CommandParameter="{Binding .}"
+                                    Style="{StaticResource ButtonStyle}" />
                         </HorizontalStackLayout>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <Entry x:Name="NoteContent" 
-               Placeholder="Enter your note here..." 
-               VerticalOptions="End" />
-        <Button Text="Create" 
+        <Grid Grid.Row="1" ColumnSpacing="5" Padding="10" HorizontalOptions="FillAndExpand">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Entry 
+                x:Name="NoteContent"
+                Grid.Column="0"
+                Placeholder="Enter your note here..." 
+                Text="{Binding NoteContent, Mode=TwoWay}"
+                VerticalOptions="End" />
+            <Button 
+                Text="Save"
+                Grid.Column="1"
                 VerticalOptions="End" 
                 Style="{StaticResource ButtonStyle}" 
-                Clicked="OnCreateNote" />
-    </VerticalStackLayout>
+                Command="{Binding SaveNoteCommand}" />
+        </Grid>
+    </Grid>
 </ContentPage>
