--- a/DeveloperPortal/Dashboard.xaml
+++ b/DeveloperPortal/Dashboard.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:DeveloperPortal.ViewModels"
@@ -7,77 +7,60 @@
              Title="{Binding Title}">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Grid RowSpacing="10" ColumnSpacing="10" WidthRequest="770">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <VerticalStackLayout Padding="30,0" Spacing="25">
+            <Grid RowSpacing="10" ColumnSpacing="10" VerticalOptions="Center" WidthRequest="{OnIdiom Phone=270, Tablet=520, Desktop=770}"
+                  RowDefinitions="{OnIdiom Phone='Auto, Auto, Auto, Auto, Auto, Auto', Tablet='*, *', Desktop='*, *'}"
+                  ColumnDefinitions="{OnIdiom Phone='Auto', Tablet='*, *', Desktop='*, *, *'}">
                 
-                <Button
-                    Text="Sentry Errors"
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Sentry Errors" />
-                <Button
-                    Text="Jira Issues"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Jira Issues" />
-                <Button
-                    Text="Chat"
-                    Grid.Row="0"
-                    Grid.Column="2"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Chat" />
-                <Button 
-                    Text="Planning poker"
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Planning poker" />
-                <Button
-                    Text="Notes"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Notes" />
-
-                <Button
-                    Text="Profile"
-                    Grid.Row="1"
-                    Grid.Column="2"
-                    HeightRequest="250"
-                    WidthRequest="250"
-                    BackgroundColor="#c6002a"
-                    Command="{Binding NavigateCommand}"
-                    CommandParameter="Profile" />
+                <Button Text="Sentry Errors"
+                        Grid.Row="{OnIdiom Phone=0, Tablet=0, Desktop=0}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=0, Desktop=0}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Sentry Errors" />
+                <Button Text="Jira Issues"
+                        Grid.Row="{OnIdiom Phone=1, Tablet=0, Desktop=0}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=1, Desktop=1}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Jira Issues" />
+                <Button Text="Chat"
+                        Grid.Row="{OnIdiom Phone=2, Tablet=1, Desktop=0}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=0, Desktop=2}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Chat" />
+                <Button Text="Planning poker"
+                        Grid.Row="{OnIdiom Phone=3, Tablet=1, Desktop=1}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=1, Desktop=0}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Planning poker" />
+                <Button Text="Notes"
+                        Grid.Row="{OnIdiom Phone=4, Tablet=2, Desktop=1}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=0, Desktop=1}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Notes" />
+                <Button Text="Profile"
+                        Grid.Row="{OnIdiom Phone=5, Tablet=2, Desktop=1}"
+                        Grid.Column="{OnIdiom Phone=0, Tablet=1, Desktop=2}"
+                        HeightRequest="250"
+                        WidthRequest="250"
+                        BackgroundColor="#c6002a"
+                        Command="{Binding NavigateCommand}"
+                        CommandParameter="Profile" />
             </Grid>
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
