--- a/DeveloperPortal/JiraIssues.xaml
+++ b/DeveloperPortal/JiraIssues.xaml
@@ -16,9 +16,9 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="jiraIssues:JiraIssue">
                         <Frame Padding="10" Margin="10" CornerRadius="8" BackgroundColor="White" HasShadow="True">
-                            <Grid ColumnDefinitions="Auto, *, Auto" RowDefinitions="Auto, Auto">
-                                <Frame WidthRequest="40" HeightRequest="40" CornerRadius="20" BackgroundColor="#c6002a" VerticalOptions="Center" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Margin="0,0,10,0"/>
-                                <StackLayout Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" VerticalOptions="Center">
+                            <Grid ColumnDefinitions="Auto, *" RowDefinitions="*"  HeightRequest="200">
+                                <Frame WidthRequest="40" HeightRequest="40" CornerRadius="20" BackgroundColor="#c6002a" VerticalOptions="Center" Grid.Row="0" Grid.Column="0" Margin="0,0,10,0"/>
+                                <StackLayout Grid.Row="0" Grid.Column="1" VerticalOptions="Center">
                                     <Label Text="{Binding Key}" FontAttributes="Bold" FontSize="Medium"/>
                                     <Label Text="{Binding Fields.Summary}" FontSize="Small" TextColor="Gray"/>
                                 </StackLayout>
