--- a/DeveloperPortal/DevPlanningPoker.xaml
+++ b/DeveloperPortal/DevPlanningPoker.xaml
@@ -23,7 +23,7 @@
             BackgroundColor="White">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="users:User">
-                    <Grid HorizontalOptions="Center">
+                    <VerticalStackLayout HorizontalOptions="Center">
                         <Image
                             Source="user.png"
                             HeightRequest="185"
@@ -33,13 +33,13 @@
                                FontSize="24" 
                                HorizontalOptions="Center"
                                VerticalOptions="Center"
-                               Margin="0, 50, 0, 0"/>
+                               Margin="0, 10, 0, 0"/>
                         <Label Text="{Binding Name}" 
                                FontSize="14" 
                                HorizontalOptions="Center"
                                VerticalOptions="End"
-                               Margin="0, 50, 0, 0"/>
-                    </Grid>
+                               Margin="0, 10, 0, 0"/>
+                    </VerticalStackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
