--- a/DeveloperPortal/DevPlanningPoker.xaml
+++ b/DeveloperPortal/DevPlanningPoker.xaml
@@ -23,7 +23,10 @@
             BackgroundColor="White">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="users:User">
-                    <VerticalStackLayout HorizontalOptions="Center">
+                    <Grid HorizontalOptions="Center">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
                         <Image
                             Source="user.png"
                             HeightRequest="185"
@@ -33,13 +36,15 @@
                                FontSize="24" 
                                HorizontalOptions="Center"
                                VerticalOptions="Center"
-                               Margin="0, 10, 0, 0"/>
-                        <Label Text="{Binding Name}" 
+                               Margin="0, 5, 0, 0" 
+                               TextColor="Black"
+                               BackgroundColor="#FFFFFF80"/> <!-- Semi-transparent background -->
+                        <Label Grid.Row="1" Text="{Binding Name}" 
                                FontSize="14" 
                                HorizontalOptions="Center"
                                VerticalOptions="End"
                                Margin="0, 10, 0, 0"/>
-                    </VerticalStackLayout>
+                    </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
