--- a/DeveloperPortal/MainPage.xaml
+++ b/DeveloperPortal/MainPage.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DeveloperPortal.MainPage">
+             xmlns:viewmodel="clr-namespace:DeveloperPortal.ViewModels"
+             x:Class="DeveloperPortal.MainPage"
+             x:DataType="viewmodel:MainPageViewModel">
 
     <ScrollView>
         <VerticalStackLayout
@@ -15,17 +16,17 @@
                 SemanticProperties.Description="Avans logo" />
 
             <Label
-                Text="Hello, Developer!"
+                Text="{OnPlatform 'Hello, Developer!', WinUI='Hello, Windows User', Android='Hello, Android User'}"
                 Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+                SemanticProperties.HeadingLevel="Level1">
+            </Label>
 
             <StackLayout>
                 <Button
-                    x:Name="LoginBtn"
                     Text="Log In"
                     SemanticProperties.Hint="Click to login"
                     BackgroundColor="#c6002a"
-                    Clicked="OnLoginClicked"
+                    Command="{Binding LoginCommand}"
                     HorizontalOptions="Center" />
             </StackLayout>
         </VerticalStackLayout>
